--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@bluehalo/ngx-leaflet": "^19.0.0",
     "@ngrx/effects": "^19.2.1",
     "@ngrx/entity": "^19.2.1",
     "@ngrx/store": "^19.2.1",
     "@ngrx/store-devtools": "^19.2.1",
     "@primeng/themes": "^19.0.5",
     "chart.js": "4.4.2",
+    "leaflet": "^1.9.4",
     "primeclt": "^0.1.5",
     "primeicons": "^7.0.0",
     "primeng": "^19.0.8",
@@ -40,6 +42,7 @@
     "@angular/cli": "^19.0.6",
     "@angular/compiler-cli": "^19.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/leaflet": "^1.9.20",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.14.0",
     "eslint-config-prettier": "^9.1.0",
