--- a/angular.json
+++ b/angular.json
@@ -39,7 +39,10 @@
                         "styles": [
                             "src/styles.scss"
                         ],
-                        "scripts": []
+                        "scripts": [
+    "node_modules/leaflet/dist/leaflet.js",
+    "node_modules/leaflet.markercluster/dist/leaflet.markercluster.js"
+  ]
                     },
                     "configurations": {
                         "production": {
@@ -103,7 +106,10 @@
                         "styles": [
                             "src/styles.scss"
                         ],
-                        "scripts": []
+                        "scripts": [
+    "node_modules/leaflet/dist/leaflet.js",
+    "node_modules/leaflet.markercluster/dist/leaflet.markercluster.js"
+  ]
                     }
                 }
             }
