--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@primeng/themes": "^19.0.5",
     "chart.js": "4.4.2",
     "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3",
     "primeclt": "^0.1.5",
     "primeicons": "^7.0.0",
     "primeng": "^19.0.8",
@@ -43,6 +44,7 @@
     "@angular/compiler-cli": "^19.0.0",
     "@types/jasmine": "~5.1.0",
     "@types/leaflet": "^1.9.20",
+    "@types/leaflet.markercluster": "^1.5.5",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.14.0",
     "eslint-config-prettier": "^9.1.0",
