--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ngrx/store-devtools": "^19.2.1",
     "@primeng/themes": "^19.0.5",
     "chart.js": "4.4.2",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "leaflet.markercluster": "^1.5.3",
     "primeclt": "^0.1.5",
