--- a/angular.json
+++ b/angular.json
@@ -41,7 +41,8 @@
                         ],
                         "scripts": [
     "node_modules/leaflet/dist/leaflet.js",
-    "node_modules/leaflet.markercluster/dist/leaflet.markercluster.js"
+    "node_modules/leaflet.markercluster/dist/leaflet.markercluster.js",
+    "node_modules/leaflet-trackplayer/dist/leaflet-trackplayer.umd.cjs"
   ]
                     },
                     "configurations": {
@@ -108,7 +109,8 @@
                         ],
                         "scripts": [
     "node_modules/leaflet/dist/leaflet.js",
-    "node_modules/leaflet.markercluster/dist/leaflet.markercluster.js"
+    "node_modules/leaflet.markercluster/dist/leaflet.markercluster.js",
+    "node_modules/leaflet-trackplayer/dist/leaflet-trackplayer.umd.cjs"
   ]
                     }
                 }
