--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "chart.js": "4.4.2",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
+    "leaflet-trackplayer": "^2.0.3",
     "leaflet.markercluster": "^1.5.3",
     "moment": "^2.30.1",
     "primeclt": "^0.1.5",
