--- a/angular.json
+++ b/angular.json
@@ -40,13 +40,19 @@
                             "src/styles.scss"
                         ],
                         "scripts": [
-    "node_modules/leaflet/dist/leaflet.js",
-    "node_modules/leaflet.markercluster/dist/leaflet.markercluster.js",
-    "node_modules/leaflet-trackplayer/dist/leaflet-trackplayer.umd.cjs"
-  ]
+                            "node_modules/leaflet/dist/leaflet.js",
+                            "node_modules/leaflet.markercluster/dist/leaflet.markercluster.js",
+                            "node_modules/leaflet-trackplayer/dist/leaflet-trackplayer.umd.cjs"
+                        ]
                     },
                     "configurations": {
                         "production": {
+                            "fileReplacements": [
+                                {
+                                    "replace": "src/environments/environment.ts",
+                                    "with": "src/environments/environment.prod.ts"
+                                }
+                            ],
                             "budgets": [
                                 {
                                     "type": "initial",
@@ -108,16 +114,16 @@
                             "src/styles.scss"
                         ],
                         "scripts": [
-    "node_modules/leaflet/dist/leaflet.js",
-    "node_modules/leaflet.markercluster/dist/leaflet.markercluster.js",
-    "node_modules/leaflet-trackplayer/dist/leaflet-trackplayer.umd.cjs"
-  ]
+                            "node_modules/leaflet/dist/leaflet.js",
+                            "node_modules/leaflet.markercluster/dist/leaflet.markercluster.js",
+                            "node_modules/leaflet-trackplayer/dist/leaflet-trackplayer.umd.cjs"
+                        ]
                     }
                 }
             }
         }
     },
     "cli": {
-      "analytics": false
+        "analytics": false
     }
 }
