--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ngrx/store": "^19.2.1",
     "@ngrx/store-devtools": "^19.2.1",
     "@primeng/themes": "^19.0.5",
+    "@turf/turf": "^7.2.0",
     "chart.js": "4.4.2",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
