--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "chart.js": "4.4.2",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
+    "leaflet-geometryutil": "^0.10.3",
     "leaflet-trackplayer": "^2.0.3",
     "leaflet.markercluster": "^1.5.3",
     "moment": "^2.30.1",
@@ -48,6 +50,7 @@
     "@angular/compiler-cli": "^19.0.0",
     "@types/jasmine": "~5.1.0",
     "@types/leaflet": "^1.9.20",
+    "@types/leaflet-draw": "^1.0.12",
     "@types/leaflet.markercluster": "^1.5.5",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.14.0",
