--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@bluehalo/ngx-leaflet": "^19.0.0",
+    "@bluehalo/ngx-leaflet-draw": "^19.0.0",
     "@ngrx/effects": "^19.2.1",
     "@ngrx/entity": "^19.2.1",
     "@ngrx/store": "^19.2.1",
