--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "chart.js": "4.4.2",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
+    "leaflet-ant-path": "^1.3.0",
     "leaflet-draw": "^1.0.4",
     "leaflet-geometryutil": "^0.10.3",
     "leaflet-trackplayer": "^2.0.3",
+    "leaflet.marker.slideto": "^0.3.0",
     "leaflet.markercluster": "^1.5.3",
     "moment": "^2.30.1",
     "primeclt": "^0.1.5",
