--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "tailwind-scrollbar-hide": "^4.0.0",
     "tailwindcss-primeui": "^0.5.1",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
